# GD32H7xx_CLion_GCC_Template

./: CMakeLists.txt  README.md  gd32h7xx.cfg  gd32h7xx_flash.ld  openocd_gd32h7xx.cfg
Core/Inc/: gd32h7xx_it.h  gd32h7xx_libopt.h  main.h  systick.h
Core/Src/: gd32h7xx_it.c  main.c  systick.c
Drivers/: CMakeLists.txt
Drivers/BSP/KEY/: key.c  key.h
Drivers/BSP/LCD/: lcd.c  lcd.h  lcd_ex.c  lcdfont.h  tli.c  tli.h
Drivers/BSP/LED/: led.c  led.h
Drivers/BSP/MPU/: mpu.c  mpu.h
Drivers/BSP/NORFLASH/: norflash.c  norflash.h
Drivers/BSP/QSPI/: qspi.c  qspi.h
Drivers/BSP/SDIO/: sd_conf.c  sd_conf.h  sdio_sdcard.c  sdio_sdcard.h
Drivers/BSP/SDRAM/: sdram.c  sdram.h
Drivers/CMSIS/GD/GD32H7xx/Include/: gd32h7xx.h
Drivers/CMSIS/GD/GD32H7xx/Source/: system_gd32h7xx.c
Drivers/Peripherals/Inc/: gd32h7xx_adc.h  gd32h7xx_axiim.h  gd32h7xx_can.h  gd32h7xx_cau.h  gd32h7xx_cmp.h  gd32h7xx_cpdm.h  gd32h7xx_crc.h  gd32h7xx_ctc.h  gd32h7xx_dac.h  gd32h7xx_dbg.h  gd32h7xx_dci.h  gd32h7xx_dma.h  gd32h7xx_edout.h  gd32h7xx_efuse.h  gd32h7xx_enet.h  gd32h7xx_exmc.h  gd32h7xx_exti.h  gd32h7xx_fac.h  gd32h7xx_fmc.h  gd32h7xx_fwdgt.h  gd32h7xx_gpio.h  gd32h7xx_hau.h  gd32h7xx_hpdf.h  gd32h7xx_hwsem.h  gd32h7xx_i2c.h  gd32h7xx_ipa.h  gd32h7xx_lpdts.h  gd32h7xx_mdio.h  gd32h7xx_mdma.h  gd32h7xx_misc.h  gd32h7xx_ospi.h  gd32h7xx_ospim.h  gd32h7xx_pmu.h  gd32h7xx_rameccmu.h  gd32h7xx_rcu.h  gd32h7xx_rspdif.h  gd32h7xx_rtc.h  gd32h7xx_rtdec.h  gd32h7xx_sai.h  gd32h7xx_sdio.h  (+10 more)
Drivers/Peripherals/Src/: gd32h7xx_adc.c  gd32h7xx_can.c  gd32h7xx_cau.c  gd32h7xx_cau_aes.c  gd32h7xx_cau_des.c  gd32h7xx_cau_tdes.c  gd32h7xx_cmp.c  gd32h7xx_cpdm.c  gd32h7xx_crc.c  gd32h7xx_ctc.c  gd32h7xx_dac.c  gd32h7xx_dbg.c  gd32h7xx_dci.c  gd32h7xx_dma.c  gd32h7xx_edout.c  gd32h7xx_efuse.c  gd32h7xx_enet.c  gd32h7xx_exmc.c  gd32h7xx_exti.c  gd32h7xx_fac.c  gd32h7xx_fmc.c  gd32h7xx_fwdgt.c  gd32h7xx_gpio.c  gd32h7xx_hau.c  gd32h7xx_hau_sha_md5.c  gd32h7xx_hpdf.c  gd32h7xx_hwsem.c  gd32h7xx_i2c.c  gd32h7xx_ipa.c  gd32h7xx_lpdts.c  gd32h7xx_mdio.c  gd32h7xx_mdma.c  gd32h7xx_misc.c  gd32h7xx_ospi.c  gd32h7xx_ospim.c  gd32h7xx_pmu.c  gd32h7xx_rameccmu.c  gd32h7xx_rcu.c  gd32h7xx_rspdif.c  gd32h7xx_rtc.c  (+13 more)
Drivers/SYSTEM/delay/: delay.c  delay.h
Drivers/SYSTEM/sys/: sys.c  sys.h
Drivers/SYSTEM/usart/: usart.c  usart.h
Middlewares/: CMakeLists.txt
Middlewares/FATFS/exfuns/: exfuns.c  exfuns.h  fattester.c  fattester.h
Middlewares/FATFS/source/: diskio.c  diskio.h  ffsystem.c
Middlewares/MALLOC/: malloc.c  malloc.h
Middlewares/USB/: CMakeLists.txt
Middlewares/USB/GD32H7xx_usbhs_library/device/class/cdc/Include/: cdc_acm_core.h
Middlewares/USB/GD32H7xx_usbhs_library/device/class/cdc/Source/: cdc_acm_core.c
Middlewares/USB/GD32H7xx_usbhs_library/device/class/msc/Include/: usbd_msc_bbb.h
Middlewares/USB/GD32H7xx_usbhs_library/device/class/msc/Source/: usbd_msc_bbb.c
Middlewares/USB/GD32H7xx_usbhs_library/driver/Include/: drv_usb_hw.h
Middlewares/USB/GD32H7xx_usbhs_library/driver/Source/: drv_usbd_int.c
Middlewares/USB/USB_APP/: gd32h7xx_usb_hw.c  usb_conf.h  usbd_conf.h  usbd_storage_msd.c
Middlewares/USMART/: usmart.c  usmart.h  usmart_config.c  usmart_port.c  usmart_port.h  usmart_str.c  usmart_str.h
User/: gd32h7xx_it.c  gd32h7xx_it.h  main.c
